# libnnue

./: CMakeLists.txt  README.md
src/libnnue/: accumulator.hpp  clipped_relu.hpp  combine.hpp  identity.hpp  multiply.hpp  nnue.hpp  relu.hpp  sigmoid.hpp  threshold.hpp  vector.hpp  weights.hpp
tests/: CMakeLists.txt  pad.cpp  xor.cpp
